Remove CONFIG_PINMAME flag entirely.

--- a/platform/whitestar/Makefile
+++ b/platform/whitestar/Makefile
@@ -24,7 +24,7 @@ CONFIG_CODE_PAGE_LIST := 56 57 58 59 60 61
 CONFIG_SYSTEM_CODE_PAGE := 62
 
 # Additional CFLAGS required on the WPC platform
-CFLAGS += -mdirect -DCONFIG_PLATFORM_WHITESTAR -fno-builtin -DCONFIG_PINMAME -mcode-section=.text -mdata-section=.text -mbss-section=ram
+CFLAGS += -mdirect -DCONFIG_PLATFORM_WHITESTAR -fno-builtin -mcode-section=.text -mdata-section=.text -mbss-section=ram
 EXTRA_ASFLAGS += -DCONFIG_PLATFORM_WHITESTAR
 
 # Don't check format strings, because we define those differently than ANSI C.
