Move score rank, basic event auditing into common2.

--- a/common/Makefile
+++ b/common/Makefile
@@ -11,7 +11,7 @@ COMMON_BASIC_OBJS +=	$(if $(CONFIG_PLAYABLE), common/ballsave.o)
 COMMON_BASIC_OBJS +=	common/coin.o
 COMMON_BASIC_OBJS +=	common/db.o
 COMMON_BASIC_OBJS += $(if $(CONFIG_EBFLEX), common/ebflex.o)
-COMMON_BASIC_OBJS +=	common/event-audit.o
+COMMON2_OBJS += common/event-audit.o
 COMMON_BASIC_OBJS +=	$(if $(CONFIG_PIC),,common/flipcode.o)
 COMMON_BASIC_OBJS +=	common/initials.o
 COMMON_BASIC_OBJS +=	$(if $(MACHINE_TZ),,common/pin.o)
@@ -23,7 +23,7 @@ COMMON_BASIC_OBJS +=	common/plunger.o
 COMMON_BASIC_OBJS +=	common/printer.o
 COMMON_BASIC_OBJS +=	common/reset.o
 COMMON_BASIC_OBJS +=	$(if $(CONFIG_RTC), common/rtc.o)
-COMMON_BASIC_OBJS +=	$(if $(CONFIG_SCORE_RANK), common/score_rank.o)
+COMMON2_OBJS +=	$(if $(CONFIG_SCORE_RANK), common/score_rank.o)
 COMMON_BASIC_OBJS += $(if $(CONFIG_ALPHA), common/segtrans.o)
 COMMON_BASIC_OBJS +=	common/serve.o
 COMMON_BASIC_OBJS +=	$(if $(CONFIG_PLATFORM_WPC), common/service.o)
