--- a/common/Makefile
+++ b/common/Makefile
@@ -12,7 +12,7 @@ COMMON_BASIC_OBJS +=	common/coin.o
 COMMON_BASIC_OBJS +=	common/db.o
 COMMON_BASIC_OBJS += $(if $(CONFIG_EBFLEX), common/ebflex.o)
 COMMON2_OBJS += common/event-audit.o
-COMMON_BASIC_OBJS +=	$(if $(CONFIG_PIC),,common/flipcode.o)
+COMMON_BASIC_OBJS +=	common/flipcode.o
 COMMON_BASIC_OBJS +=	common/initials.o
 COMMON_BASIC_OBJS +=	$(if $(MACHINE_TZ),,common/pin.o)
 COMMON_BASIC_OBJS +=	common/locale.o
