Move 'make run' etc. commands to cpu makefiles.
Now you can also make run in native mode.

--- a/cpu/m6809/Makefile
+++ b/cpu/m6809/Makefile
@@ -52,3 +52,36 @@ KERNEL_ASM_OBJS += $(C)/bcd_string.o
 KERNEL_ASM_OBJS += $(C)/irqload.o
 KERNEL_ASM_OBJS += $(C)/div32.o
 KERNEL_ASM_OBJS += $(if $(CONFIG_BPT), $(C)/breakpoint.o)
+
+.PHONY : run
+run:
+	# Start pinmame up and let it run indefinitely.
+	$(PINMAME) $(PINMAME_MACHINE) $(PINMAME_FLAGS) &
+
+.PHONY : debug
+debug:
+	# Start pinmame up and let it run indefinitely.
+	$(PINMAME) $(PINMAME_MACHINE) -d $(PINMAME_FLAGS) &
+
+.PHONY : rund
+rund: run $(DBCON)
+	xterm -e "$(DBCON) -1" &
+
+.PHONY : rund-file
+rund-file: run $(DBCON)
+	xterm -e "$(DBCON) -1 > $(DBCON_FILE) 2>&1" &
+
+.PHONY : endrun
+endrun :
+	kill $(shell pidof $(PINMAME))
+
+.PHONY : timedrun
+timedrun:
+	$(MAKE) rund-file DBCON_FILE="test.log"
+	sleep 30
+	$(MAKE) endrun
+
+.PHONY : runcon
+runcon: $(BLDDIR)/$(GAME_ROM)
+	wpc-run $(BLDDIR)/$(GAME_ROM)
+
